# O.M.N.I

./: .gitignore  OMNI_Agent_Build_Prompt.txt  README.md  ROADMAP.md  install.ps1  launch-chrome.ps1  run-backend.ps1  run-dev.ps1
backend/: README.md  __init__.py  main.py  requirements-voice.txt  requirements.txt
backend/action/: README.md  browser.py  files.py  input.py
backend/core/: README.md  config.py  events.py  hardware.py  llm.py  logging.py  orchestrator.py  safety.py
backend/memory/: README.md  crypto.py  schema.sql  store.py  vector.py
backend/perception/: README.md  ocr.py  screen.py  windows.py
backend/tests/: README.md  test_smoke.py
backend/tools/: README.md  make_icons.py
backend/voice/: README.md  catalog.py  stt.py  tts.py
backend/workflow/: README.md  apply.py  chatgpt_tabs.py  job_search.py  resume.py  states.py
docs/: ARCHITECTURE.md  DECISIONS.md  MODELS.md  PERMISSIONS.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: README.md
frontend/src/: App.tsx  README.md  api.ts  store.ts  styles.css
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/capabilities/: README.md  default.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: Background.tsx  ChatHistoryButton.tsx  ChatPanel.tsx  Dashboard.tsx  ErrorConsole.tsx  LayoutSwitcher.tsx  Logo.tsx  OnboardingTour.tsx  PermissionToasts.tsx  README.md  SettingsModal.tsx  Sidebar.tsx  Tooltip.tsx  (+1 more)
