[package]
name = "omni"
version = "0.1.0"
description = "OMNI - Offline Machine Navigation Intelligence"
edition = "2021"
rust-version = "1.77"

[lib]
name = "omni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
